# onchainai

./: .coderabbit.yaml  .env.example  .gitignore  .mcp.json  .playwright-add.yaml  .playwright-after-cname.yaml  .playwright-clean.yaml  .playwright-del.yaml  .playwright-dns-new.yaml  .playwright-dns.yaml  .playwright-dns2.yaml  .playwright-dns3.yaml  .playwright-dns4.yaml  .playwright-edit-www.yaml  .playwright-external.yaml  .playwright-form.yaml  .playwright-forward.yaml  .playwright-fwd.yaml  .playwright-fwd2.yaml  .playwright-portfolio.yaml  .playwright-reload.yaml  .pr_agent.toml  .vercelignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Dockerfile  Dockerfile.api  LICENSE  README.md  SECURITY.md  package.json  railway.json  server.json  skills-lock.json  vercel.json
.cargo/: config.toml
.claude/: launch.json  settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: onchainai-ui-workflow
.codescene/: code-health-rules.json
.cursor/: hooks.json  mcp.json
.cursor/hooks/: ui-staleness-stop.sh
.cursor/rules/: onchainai-agents.mdc
.factory/droids/: crawler-worker.md  rust-builder.md  security-checker.md
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml
.grok/: config.toml
.playwright-cli/: page-2026-06-25T11-13-54-249Z.yml  page-2026-06-25T11-15-29-094Z.yml  page-2026-06-25T11-15-49-893Z.yml  page-2026-06-25T11-23-20-113Z.yml
agent/skills/: README.md
commands/: find-tool.md
docs/: AGENT_HARNESS.md  AGENT_READINESS_REPORT.md  BRANCH_PROTECTION.md  BUILD_DEPLOY_RULES.md  CONNECT.md  DISK_MAINTENANCE.md  FEATURED_CARDS.md  GROK_FULL_SPEC_TASK.md  INDEX.md  LAUNCH_READINESS_SPEC.md  MCP_ADD_FLOW_SPEC.md  MCP_AGENT_WORKFLOW.md  MCP_EXAMPLE_PROMPTS.md  MCP_X402_MONETIZATION_SPEC.md  MULTI_AGENT_COORDINATION.md  MVP_DESIGN.md  OPERATOR_GUIDE.md  PRODUCT_ENHANCEMENT_SPEC.md  REVENUE_FORECAST.md  SECURITY.md  SEED_DATA.md  SKILL_PLUGIN_SPEC.md  TOOL_DISCOVERY.md  UI_UX_DESIGN.md  UI_UX_IMPROVEMENT_SPEC.md  USER_FRIENDLY_DISCOVERY_SPEC.md  VERCEL_COST_MCP_EDGE_ROUTING.md  VERIFICATION.md  X402_MONETIZATION_SPEC.md  X402_OPEN_LISTING_SPEC.md  X402_REFERRAL_SPEC.md  X402_ROADMAP.md  handoff-packet-template.md
docs/archive/: ADMIN_QUICK_ACTIONS_SPEC.md  AGENT_NATIVE_OPS_SPEC.md  README.md
docs/listings/: awesome-crypto-mcp-servers.md  directory-forms.md  web3-mcp-hub-onchainai.json
docs/reviews/: 2026-07-13-hybrid-mcp-billing-review.md
fixtures/: demote-non-agent-official.json  discovery-ground-truth.json
frontend/: README.md  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/app/: HomePageClient.tsx  error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx  robots.ts  sitemap.ts
frontend/hooks/: useToolSearchTypeahead.ts
frontend/lib/: agent-link-copy.ts  agent-link-guide.ts  api-origin.ts  api.ts  attribution-session.ts  auth-errors.ts  auth-nav.ts  auth-origin.ts  auth.tsx  blueprint-export.ts  blueprint-flow-core.mjs  blueprint-flow.test.mjs  blueprint-share-fingerprint-core.mjs  blueprint-share-regen-core.mjs  blueprint-share-regen.test.mjs  blueprint-share-storage.test.mjs  blueprint-share-storage.ts  chains.ts  (+35 more)
migrations/: .gitkeep  001_init.sql  002_auth.sql  003_social.sql  004_onboarding.sql  005_domain_mcp_default.sql  006_operator_hardening.sql  007_submission_reports_claims.sql  008_operator_harness.sql  009_featured_cards.sql  010_featured_storage_bucket.sql  011_public_relevance_quality_gate.sql  012_recover_strong_legacy_crypto_rows.sql  013_strict_legacy_recovery_boundaries.sql  014_recover_strict_boundary_matches.sql  015_public_tool_where_containment.sql  016_tool_logo_url.sql  017_x402_referral.sql  018_referral_events_attribution_session.sql  019_agent_review_harness.sql  020_public_official_links_policy.sql  021_official_links_hardening.sql  022_github_profile_id.sql  023_profile_sensitive_column_hardening.sql  024_toolkit_bookmark_metadata.sql  025_content_management.sql  026_crawler_schedule.sql  027_blueprints.sql  028_x402_verification.sql  029_blueprint_edges.sql  030_agent_sync.sql  031_x402_open_listing.sql  032_mcp_x402_monetization.sql  033_agent_device_sessions_rls_fix.sql  034_onchainai_brand_logo.sql  035_google_profile_id.sql  036_universal_add_mcp_install.sql  037_tools_search_vector_index.sql  038_canonicalize_chain_aliases.sql  039_canonicalize_chain_aliases_full.sql  (+1 more)
public/: site.webmanifest
scripts/: admin-queue-stats.sh  agent-harness-check.sh  agent-readiness-report.mjs  agent-readiness-report.sh  agent-start.sh  agent-surface-lib.mjs  apply-homepage-gaps.mjs  audit-homepage-gaps.mjs  auth-admin-readiness.sh  bazaar-approve-rubric.mjs  browser-smoke.mjs  browser-test-helpers.mjs  bulk-fix-vendor-first-party-gates.mjs  bulk-verify-first-party-apply.mjs  capture-gating-evidence.sh  chain-logo-manifest.json  check-mcp-config-parity.sh  clean-build-artifacts.sh  click-test.mjs  configure-branch-protection.sh  configure-godaddy-dns.sh  configure-railway-git-deploy.sh  configure-supabase-auth.sh  demote-non-agent-official.mjs  deploy-railway.sh  dev-watch.sh  discovery-gap-audit.mjs  discovery-gap-lib.mjs  disk-audit.sh  disk-guard.sh  dns-records.txt  download-llama-chain-logos.py  enable-mcp-premium-export.mjs  enable-w2-guard.mjs  gen-chain-canonical-migration.mjs  godaddy-dns-vercel.sh  godaddy-mcp-registry-txt.sh  homepage-curate-lib.mjs  install-agent-hooks.sh  install-disk-autoclean.sh  (+71 more)
seeds/: dev_seed.sql  dev_seed_featured.sql  dev_seed_social.sql  reset.sql
src/: app.rs  chains.rs  client_storage.rs  config.rs  discovery.rs  filter_query.rs  install_safety.rs  lib.rs  main.rs  public_install_guide.rs  trust_verification.rs  vendor_orgs.rs  workbench.rs
style/: .gitkeep  output.css
supabase/: config.toml
templates/: .gitkeep
tests/: agent_review_harness_flow.rs  attribution_endpoint.rs  bob_gateway_registration.rs  mcp-registry-wiring.rs  mcp_add_flow_install_guide.rs  review_tool_execution.rs  review_tool_verdict_unit.rs
(+367 files in other folders)
