[package]
name = "onchainai"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Crypto tool directory — auto-discover, normalize, and expose fragmented crypto tools for humans and agents."
license = "MIT"

[package.metadata.leptos]
output-name = "onchainai"
site-root = "target/site"
site-pkg-dir = "pkg"
site-addr = "127.0.0.1:3000"
reload-port = 3001
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "onchainai"
path = "src/main.rs"
required-features = ["ssr"]

[features]
# Empty default: cargo-leptos builds the server with `ssr` (bin-features) and the
# wasm client with `hydrate` (lib-features) explicitly. Keeping `ssr` out of the
# default prevents it leaking into the wasm/hydrate build (which pulls tokio's net
# backend -> mio, unsupported on wasm). Local cargo commands need `--features ssr`.
default = []
ssr = [
    "dep:leptos_axum",
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:sqlx",
    "dep:reqwest",
    "dep:scraper",
    "dep:tokio",
    "dep:tokio-cron-scheduler",
    "dep:dotenvy",
    "dep:supabase-auth",
    "dep:jsonwebtoken",
    "dep:sha2",
    "dep:getrandom",
    "dep:ethers-core",
    "dep:solana-sdk",
    "dep:governor",
    "dep:tower_governor",
    "dep:base64",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:gloo-net",
    "dep:gloo-timers",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "dep:gloo-net",
    "dep:gloo-timers",
    "dep:web-sys",
    # Shared config helpers (from_env) are compiled into the WASM bundle.
    "dep:dotenvy",
]

[profile.dev]
# Disk control: full DWARF in debug builds is the main `target/debug` bloat
# source. Keep line-number backtraces, drop the rest.
debug = "line-tables-only"

[profile.dev.package."*"]
# Dependencies rarely need source-level debugging — strip their debug info
# entirely (the bulk of the debug-artifact size).
debug = false

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
leptos = { version = "0.8", default-features = false }
futures = { version = "0.3", default-features = false, features = ["async-await"] }
leptos_meta = { version = "0.8", default-features = false }
leptos_router = { version = "0.8", default-features = false }
leptos_axum = { version = "0.8", optional = true }
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "set-header", "limit", "compression-gzip"], optional = true }
sqlx = { version = "0.8", features = ["postgres", "uuid", "chrono", "json", "macros", "runtime-tokio", "migrate"], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
scraper = { version = "0.22", optional = true }
base64 = { version = "0.22", optional = true }
urlencoding = "2"
url = "2"
tokio = { version = "1", features = ["full"], optional = true }
tokio-cron-scheduler = { version = "0.14", optional = true }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde"] }
slug = "0.1"
anyhow = "1"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
dotenvy = { version = "0.15", optional = true }
supabase-auth = { version = "0.10", optional = true }
jsonwebtoken = { version = "9", optional = true }
sha2 = { version = "0.10", optional = true }
getrandom = { version = "0.2", optional = true }
ethers-core = { version = "2", optional = true }
solana-sdk = { version = "2", optional = true }
validator = { version = "0.18", features = ["derive"] }
governor = { version = "0.6", features = ["dashmap"], optional = true }
tower_governor = { version = "0.8.0", features = ["tracing"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
gloo-net = { version = "0.6", optional = true }
gloo-timers = { version = "0.3", features = ["futures"], optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = ["RequestCredentials", "Window", "Navigator", "Clipboard", "Storage", "Location", "File", "FileList", "FileReader", "HtmlInputElement", "Event", "Document", "HtmlDocument"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"