[package]
name = "onchainai"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Crypto tool directory — auto-discover, normalize, and expose fragmented crypto tools for humans and agents."
license = "MIT"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "onchainai"
path = "src/main.rs"
required-features = ["ssr"]

[[test]]
name = "mcp_add_flow_install_guide"
path = "tests/mcp_add_flow_install_guide.rs"
required-features = ["ssr", "test-helpers"]

[features]
default = []
# Exposes test-only helpers so integration test binaries can call them.
test-helpers = []
ssr = [
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:sqlx",
    "dep:reqwest",
    "dep:scraper",
    "dep:tokio",
    "dep:tokio-cron-scheduler",
    "dep:dotenvy",
    "dep:supabase-auth",
    "dep:jsonwebtoken",
    "dep:sha2",
    "dep:getrandom",
    "dep:ethers-core",
    "dep:solana-sdk",
    "dep:governor",
    "dep:tower_governor",
    "dep:base64",
    "dep:ed25519-dalek",
    "dep:tracing",
    "dep:tracing-subscriber",
]

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[dependencies]
futures = { version = "0.3", default-features = false, features = ["async-await"] }
axum = { version = "0.8", features = ["multipart"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "set-header", "limit", "compression-gzip"], optional = true }
sqlx = { version = "0.8", features = ["postgres", "uuid", "chrono", "json", "macros", "runtime-tokio", "migrate"], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
scraper = { version = "0.22", optional = true }
base64 = { version = "0.22", optional = true }
ed25519-dalek = { version = "2", optional = true }
urlencoding = "2"
url = "2"
tokio = { version = "1", features = ["full"], optional = true }
tokio-cron-scheduler = { version = "0.14", optional = true }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
slug = "0.1"
anyhow = "1"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
dotenvy = { version = "0.15", optional = true }
supabase-auth = { version = "0.10", optional = true }
jsonwebtoken = { version = "9", optional = true }
sha2 = { version = "0.10", optional = true }
getrandom = { version = "0.2", optional = true }
ethers-core = { version = "2", optional = true }
solana-sdk = { version = "2", optional = true }
validator = { version = "0.18", features = ["derive"] }
governor = { version = "0.6", features = ["dashmap"], optional = true }
tower_governor = { version = "0.8.0", features = ["tracing"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"